# ESIREM_QUANTUM_MAIN_FW_nRF52833

./: .clang-format  .gitignore  CMakeLists.txt  README.md  prj.conf  workspace.code-workspace
include/: ble.h  ble_service_config.h  ble_service_user.h  ble_uuid.h  common.h  core.h  settings.h
src/: ble.c  ble_service_config.c  ble_service_user.c  core.c  main.c  settings.c
